EVA-154 Feat: Se agregan los badge a los estados en solicitudes de aprobación

--- a/SGI/templates/SGI/AprobacionDocumentos/solicitudes_aprobacion.html
+++ b/SGI/templates/SGI/AprobacionDocumentos/solicitudes_aprobacion.html
@@ -43,7 +43,17 @@
                                                     <tr>
                                                         <td>{{ archivo.documento.nombre }}</td>
                                                         <td>{{ archivo.version }}</td>
-                                                        <td {% if archivo.estado_id == 0 %}class="campo_activo"{% endif %}>{{ archivo.estado }}</td>
+                                                        <td>
+                                                            {% if archivo.estado_id == 0 %}
+                                                                <span class="badge badge-warning">{{ archivo.estado }}</span>
+                                                            {% elif archivo.estado_id == 1 %}
+                                                                <span class="badge badge-primary">{{ archivo.estado }}</span>
+                                                            {% elif archivo.estado_id == 2 %}
+                                                                <span class="badge badge-secondary">{{ archivo.estado }}</span>
+                                                            {% else %}
+                                                                <span class="badge badge-danger">{{ archivo.estado }}</span>
+                                                            {% endif %}
+                                                        </td>
                                                         <td>{{ archivo.notas }}</td>
                                                         <td>{{ archivo.fecha_documento|date:'Y-m-d' }}</td>
                                                         <td>
