--- a/Financiero/templates/Financiero/FlujoCaja/FlujoCajaGeneral/detalle_flujo_caja.html
+++ b/Financiero/templates/Financiero/FlujoCaja/FlujoCajaGeneral/detalle_flujo_caja.html
@@ -63,7 +63,7 @@
                                     <div class="panel-body">
                                         <div class="table-responsive">
                                             <table class="table table-bordered w-100" id="dataTableFlujoCaja">
-                                                <thead>
+                                                <thead class="bg-primary-600">
                                                     <tr>
                                                         <th>Fecha del Movimiento</th>
                                                         <th>Tipo de Movimiento</th>
