--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoContratos/index.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoContratos/index.html
@@ -69,7 +69,7 @@
                                                                     {{ consecutivo.tercero }}
                                                                 {% endif %}
                                                             </td>
-                                                            <td>{{ consecutivo.fecha_crea | date:'Y-m-d h:i'}}</td>
+                                                            <td>{{ consecutivo.fecha_crea | date:'Y-m-d H:i'}}</td>
                                                             <td>{{ consecutivo.fecha_inicio | date:'Y-m-d'}}</td>
                                                             <td>{% if consecutivo.fecha_final %}
                                                                     {{ consecutivo.fecha_final | date:'Y-m-d'}}
