--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoOficios/index.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoOficios/index.html
@@ -63,7 +63,7 @@
                                                     {% for consecutivo in consecutivos %}
                                                         <tr {% if consecutivo == consecutivos.last and id_filtro == 1 and consecutivo.usuario == request.user %}style="background: #fffaee;"{% endif %}>
                                                             <td>{{ consecutivo.codigo}}</td>
-                                                            <td>{{ consecutivo.fecha | date:'Y-m-d H:m'}}</td>
+                                                            <td>{{ consecutivo.fecha | date:'Y-m-d H:i'}}</td>
                                                             <td>{% if consecutivo.contrato %}
                                                                     {{ consecutivo.contrato}} - {{ consecutivo.contrato.cliente }}
                                                                 {% else %}
