--- a/Administracion/templates/Administracion/Autenticacion/iniciar-sesion.html
+++ b/Administracion/templates/Administracion/Autenticacion/iniciar-sesion.html
@@ -13,7 +13,7 @@
                     <div class="card p-4 rounded-plus bg-faded" style="justify-content: center">
                         <div class="card p-4 mt-6 rounded-plus bg-faded-white" style="justify-content: center">
                             <div style="display: flex; justify-content: center;">
-                                <img src="{% static 'EVA/Plantilla/img/custom/logo-eva.svg' %}">
+                                <img src="{% static 'EVA/Plantilla/img/custom/logo-eva.svg' %}" alt="logo eva">
                             </div>
                             <br>
                             <div style="display: flex; justify-content: center;">
@@ -22,12 +22,12 @@
                             <form action="{% url 'Administracion:iniciar-sesion' %}" id="iniciar-sesion-form" method="post" class="needs-validation" novalidate>
                                 {% csrf_token %}
                                 <div class="form-group">
-                                    <label class="form-label" for="usuario">Usuario</label>
+                                    <label class="form-label" for="username">Usuario</label>
                                     <input type="text" id="username" name="username" class="form-control" placeholder="Digite su usuario"  required>
                                     <div class="invalid-feedback">Por favor digite su usuario</div>
                                 </div>
                                 <div class="form-group">
-                                    <label class="form-label" for="contraseña">Contraseña</label>
+                                    <label class="form-label" for="password">Contraseña</label>
                                     <input type="password" id="password" name="password" class="form-control" placeholder="Digite su contraseña"  required style="font-size: 0.8125rem;">
                                     <div class="invalid-feedback">Por favor digite su contraseña</div>
                                 </div>
@@ -41,7 +41,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <input id="datos_token" name="datos" hidden value="{{ datos }}">
+                                <input id="datos_token" name="datos" hidden value="{{ datos }}" aria-label="">
                                 <div class="row no-gutters">
                                     <div class="col-lg-6 pl-lg-1 my-2">
                                         <button id="js-login-btn" type="submit" class="btn btn-primary btn-block ">Iniciar sesión</button>
@@ -50,7 +50,7 @@
                             </form>
                         </div>
                         <div class="mt-4" style="display: flex; justify-content: center;">
-                                <img src="{% static 'EVA/Plantilla/img/custom/logo-arios-blanco.svg' %}" style="width: 50%">
+                                <img src="{% static 'EVA/Plantilla/img/custom/logo-arios-blanco.svg' %}" style="width: 50%" alt="logo arios">
                         </div>
                     </div>
                 </div>
