EVA-151 feat: Se actualiza fondo del inicio de sesión, recuperar contraseña, asignación de contrseña y asignación de contrseña completa.
Se creó  css para que solo se tenga que cambiar ahí cuando se vaya actualizar el fondo y no en cada vista.

--- a/Administracion/static/Administracion/css/Autenticacion/generales.css
+++ b/Administracion/static/Administracion/css/Autenticacion/generales.css
@@ -28,3 +28,9 @@ input:-webkit-autofill {
 .titulo-autenticacion {
     color: var(--theme-primary);
 }
+
+.fondo-autenticacion {
+    background: white url('../../img/fondo.svg') no-repeat center bottom fixed;
+    background-size: cover;
+}
+
