--- a/Administracion/templates/Administracion/Autenticacion/olvido_contrasena.html
+++ b/Administracion/templates/Administracion/Autenticacion/olvido_contrasena.html
@@ -7,7 +7,7 @@
 
 
 {% block main %}
-    <div class="flex-1" style="background: url('{% static 'EVA/Plantilla/img/custom/fondo.png' %}') no-repeat center bottom fixed; background-size: cover ">
+    <div class="flex-1 fondo-autenticacion">
         <div class="container py-4 py-lg-5 my-lg-5 px-4 px-sm-0">
             <div class="row">
                 <div class="col-sm-12 col-md-3 col-lg-3 col-xl-4"></div>
