--- a/Administracion/templates/Administracion/Autenticacion/iniciar-sesion.html
+++ b/Administracion/templates/Administracion/Autenticacion/iniciar-sesion.html
@@ -6,7 +6,7 @@
 
 {% block main %}
 
-    <div class="flex-1" style="background: white url('{% static 'EVA/Plantilla/img/custom/fondo.svg' %}') no-repeat center bottom fixed; background-size: cover" >
+    <div class="flex-1 fondo-autenticacion">
         <div class="container py-4 py-lg-5 my-lg-5 px-4 px-sm-0">
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-5 col-xl-4 ml-auto">
