EVA-151 fix: Se soluciona problema que al  cambiar la contraseña en algunos casos se redirigia al inicio de sesión de proveedores.

--- a/Administracion/templates/Administracion/Autenticacion/password_reset_complete.html
+++ b/Administracion/templates/Administracion/Autenticacion/password_reset_complete.html
@@ -21,7 +21,7 @@
                             </div>
                             <br><br>
                             <h4 style="text-align: center">La contraseña se cambió con éxito</h4>
-                            <button id="js-login-btn" type="button" onclick='window.location.href="{% url 'Administracion:cerrar-sesion' %}"' class="btn btn-primary btn-block mt-2">Ir a Inicio de Sesión</button>
+                            <button id="js-login-btn" type="button" onclick='window.location.href="{% url 'Administracion:iniciar-sesion' %}"' class="btn btn-primary btn-block mt-2">Ir a Inicio de Sesión</button>
                         </div>
                         <div class="mt-4" style="display: flex; justify-content: center;">
                                 <img src="{% static 'EVA/Plantilla/img/custom/logo-arios-blanco.svg' %}" style="width: 50%">
