EVA-151 feat: Se aplica estilo definido a los templates de registro y autenticación realacionados con el proveedor.

--- a/Administracion/static/Administracion/css/Autenticacion/generales.css
+++ b/Administracion/static/Administracion/css/Autenticacion/generales.css
@@ -33,4 +33,8 @@ input:-webkit-autofill {
     background: white url('../../img/fondo.svg') no-repeat center bottom fixed;
     background-size: cover;
 }
+.fondo-autenticacion-proveedores {
+    background: url('../../img/fondo.svg') no-repeat center bottom fixed;
+    background-size: cover;
+}
 
