--- a/Administracion/templates/Administracion/Tercero/Proveedor/Autenticacion/inicio-sesion.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/Autenticacion/inicio-sesion.html
@@ -1,60 +1,68 @@
+
 {% extends 'Administracion/Autenticacion/_common/base_autenticacion.html' %}
 {% load static %}
 {% block titulo %}
-    Inicio de sesión Proveedores
+    Inicio de Sesión Proveedores - EVA
 {% endblock %}
 
-{% block styles %}
-	<!-- page related CSS below -->
-    <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/notifications/sweetalert2/sweetalert2.bundle.css' %}">
-{% endblock styles%}
-
 {% block main %}
-    <div class="flex-1" style="background: url('{% static 'EVA/Plantilla/img/svg/pattern-1.svg' %}') no-repeat center bottom fixed; background-size: cover ">
-        <div class="container py-4 py-lg-5 my-lg-5 px-4 px-sm-0 w-50">
-            <div style="position: fixed; top: 45%; left: 50%; width: 320px; height: auto; -webkit-transform: translate(-50%,-50%); transform: translate(-50%,-50%);">
-                <div class="page-logo m-0 w-100 align-items-center justify-content-center rounded border-bottom-left-radius-0 border-bottom-right-radius-0 px-4">
-                    <img src="{% static 'EVA/Plantilla/img/logo.png' %}" alt="EVA" aria-roledescription="logo">
-                    <span class="page-logo-text mr-1">EVA - Proveedores</span>
-                </div>
-                <div class="card p-4 border-top-left-radius-0 border-top-right-radius-0">
-                    <form action="{% url 'Administracion:proveedor-iniciar-sesion' %}" id="iniciar-sesion-proveedor-form" method="post" class="needs-validation" novalidate>
-                        {% csrf_token %}
-                        <div class="form-group">
-                            <label class="form-label" for="correo">Correo</label>
-                            <input type="text" id="correo" name="correo" class="form-control" placeholder="Correo" value="{{ correo }}">
-                            <span class="help-block">
-                                Ingrese su correo electronico
-                            </span>
+
+    <div class="flex-1 fondo-autenticacion-proveedores">
+        <div class="container py-4 py-lg-5 my-lg-5 px-4 px-sm-0">
+            <div class="row">
+                <div class="col-sm-12 col-md-6 col-lg-5 col-xl-4 ml-auto">
+                    <div class="card p-4 rounded-plus bg-faded" style="justify-content: center">
+                        <div style="display: flex; justify-content: center;">
+                                <img src="{% static 'EVA/Plantilla/img/custom/proveedores/icono-proveedores.svg' %}" height="80" alt="logo proveedores">
                         </div>
-                        <div class="form-group">
-                            <label class="form-label" for="password">Contraseña</label>
-                            <input type="password" id="password" name="password" class="form-control" placeholder="Contraseña">
-                            <span class="help-block">
-                                Ingrese su contraseña
-                            </span>
+                        <div style="display: flex; justify-content: center;">
+                                <img src="{% static 'EVA/Plantilla/img/custom/proveedores/texto-proveedores.svg' %}" height="60" alt="logo proveedores">
                         </div>
-                        <div class="form-group text-left">
-                            <a href="{% url 'Administracion:olvido-contrasena-proveedor' %}" >
-                                ¿Olvidó su contraseña?
-                            </a>
-                        </div>
-                        <input id="datos_token" name="datos" hidden value="{{ datos }}">
-                        <div class="row no-gutters">
-                            <div class="col-lg-12">
-                                <button id="js-login-btn" type="submit" class="btn btn-danger btn-block btn-pills">Iniciar sesión</button>
+
+                        <div class="card p-4 mt-1 rounded-plus bg-faded-white" style="justify-content: center">
+                            <div style="display: flex; justify-content: center;">
+                                <img src="{% static 'EVA/Plantilla/img/custom/logo-eva.svg' %}">
                             </div>
-                            <div class="col-lg-12 pt-2 t-a-c">
-                                ¿No tiene una cuenta?&nbsp;&nbsp;<a href="{% url 'Administracion:proveedor-registro' %}" class="text-primary"> Registrarse</a>
+                            <br>
+                            <div style="display: flex; justify-content: center;">
+                                <h2 class="titulo-autenticacion">Inicio de Sesión</h2>
                             </div>
+                            <form action="{% url 'Administracion:proveedor-iniciar-sesion' %}" id="iniciar-sesion-proveedor-form" method="post" class="needs-validation" novalidate>
+                                {% csrf_token %}
+                                <div class="form-group">
+                                    <label class="form-label" for="correo">Correo</label>
+                                    <input type="text" id="correo" name="correo" class="form-control" placeholder="Correo" value="{{ correo }}">
+                                    <span class="help-block">
+                                        Ingrese su correo electrónico
+                                    </span>
+                                </div>
+                                <div class="form-group">
+                                    <label class="form-label" for="contraseña">Contraseña</label>
+                                    <input type="password" id="password" name="password" class="form-control" placeholder="Digite su contraseña"  required style="font-size: 0.8125rem;">
+                                    <div class="invalid-feedback">Por favor digite su contraseña</div>
+                                </div>
+                                <div class="form-group text-left">
+                                    <a href="{% url 'Administracion:olvido-contrasena-proveedor' %}" >
+                                        ¿Olvidó su contraseña?
+                                    </a>
+                                </div>
+                                <input id="datos_token" name="datos" hidden value="{{ datos }}">
+                                <div class="row no-gutters">
+                                    <div class="col-lg-6 pl-lg-1 my-2">
+                                        <button id="js-login-btn" type="submit" class="btn btn-primary btn-block ">Iniciar sesión</button>
+                                    </div>
+                                    <div class="col-lg-12 pt-2 t-a-c">
+                                        ¿No tiene una cuenta?&nbsp;&nbsp;<a href="{% url 'Administracion:proveedor-registro' %}" class="text-primary"> Registrarse</a>
+                                    </div>
+                                </div>
+                            </form>
                         </div>
-                    </form>
+                        <div class="mt-4" style="display: flex; justify-content: center;">
+                                <img src="{% static 'EVA/Plantilla/img/custom/logo-arios-blanco.svg' %}" style="width: 50%">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 {% endblock %}
-
-{% block scripts %}
-    <script src="{% static 'EVA/Plantilla/js/notifications/sweetalert2/sweetalert2.bundle.js' %}"></script>
-{% endblock scripts %}
