--- a/Administracion/templates/Administracion/Tercero/Proveedor/Autenticacion/olvido_contrasena.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/Autenticacion/olvido_contrasena.html
@@ -6,35 +6,50 @@
 {% endblock %}
 
 {% block main %}
-    <div class="flex-1" style="background: url('{% static 'EVA/Plantilla/img/svg/pattern-1.svg' %}') no-repeat center bottom fixed; background-size: cover ">
+    <div class="flex-1 fondo-autenticacion-proveedores">
         <div class="container py-4 py-lg-5 my-lg-5 px-4 px-sm-0">
             <div class="row">
                 <div class="col-sm-12 col-md-3 col-lg-3 col-xl-4"></div>
                 <div class="col-sm-12 col-md-6 col-lg-6 col-xl-4">
-                    <div class="page-logo m-0 w-100 align-items-center justify-content-center rounded border-bottom-left-radius-0 border-bottom-right-radius-0 px-4">
-                        <img src="{% static 'EVA/Plantilla/img/logo.png' %}" alt="EVA" aria-roledescription="logo">
-                        <span class="page-logo-text mr-1">EVA - Proveedores</span>
-                    </div>
-                    <div class="card p-4 border-top-left-radius-0 border-top-right-radius-0">
-                        <form action="{% url 'Administracion:olvido-contrasena-proveedor' %}" method="post" class="needs-validation" novalidate>
-                            {% csrf_token %}
-                            <div class="form-group m-b-10">
-                                <label class="id_correo" for="usuario">Correo electrónico</label>
-                                <input type="email" id="id_correo" name="email" class="form-control" placeholder="Digite su correo electrónico"  required>
-                                <div class="invalid-feedback">Por favor digite su correo electrónico</div>
-                            </div>
-                            <div class="row no-gutters" style="justify-content: center">
-                                <div class="col-lg-8 pl-lg-1 my-2">
-                                    <button id="js-login-btn" type="submit" class="btn btn-danger btn-block btn-pills">Reestablecer Contraseña</button>
-                                </div>
-                            </div>
-                            <div class="row no-gutters" style="justify-content: center">
-                                ¿Ya tienes el correo y la contraseña? &nbsp;
-                            <a href="{% url 'Administracion:proveedor-iniciar-sesion' %}" >
-                                Iniciar Sesión
-                            </a>
+                    <div class="card p-4 rounded-plus bg-faded" style="justify-content: center">
+                        <div style="display: flex; justify-content: center;">
+                                <img src="{% static 'EVA/Plantilla/img/custom/proveedores/icono-proveedores.svg' %}" height="80" alt="logo proveedores">
                         </div>
-                        </form>
+                        <div style="display: flex; justify-content: center;">
+                                <img src="{% static 'EVA/Plantilla/img/custom/proveedores/texto-proveedores.svg' %}" height="60" alt="logo proveedores">
+                        </div>
+
+                        <div class="card p-4 mt-1 rounded-plus bg-faded-white" style="justify-content: center">
+                            <div style="display: flex; justify-content: center;">
+                                <img src="{% static 'EVA/Plantilla/img/custom/logo-eva.svg' %}">
+                            </div>
+                            <br>
+                            <div style="display: flex; justify-content: center;">
+                                <h2 class="titulo-autenticacion">Recuperar Contraseña</h2>
+                            </div>
+                            <form action="{% url 'Administracion:olvido-contrasena-proveedor' %}" method="post" class="needs-validation" novalidate>
+                                {% csrf_token %}
+                                <div class="form-group m-b-10">
+                                    <label class="id_correo" for="usuario">Correo electrónico</label>
+                                    <input type="email" id="id_correo" name="email" class="form-control" placeholder="Digite su correo electrónico"  required>
+                                    <div class="invalid-feedback">Por favor digite su correo electrónico</div>
+                                </div>
+                                <div class="row no-gutters" style="justify-content: center">
+                                    <div class="col-lg-12 pl-lg-1 my-2">
+                                        <button id="js-login-btn" type="submit" class="btn btn-primary btn-block">Enviar solicitud</button>
+                                    </div>
+                                </div>
+                                <div class="row no-gutters" style="justify-content: center">
+                                    ¿Ya tienes el correo y la contraseña? &nbsp;
+                                    <a href="{% url 'Administracion:proveedor-iniciar-sesion' %}" >
+                                        Iniciar Sesión
+                                    </a>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="mt-4" style="display: flex; justify-content: center;">
+                            <img src="{% static 'EVA/Plantilla/img/custom/logo-arios-blanco.svg' %}" style="width: 50%">
+                        </div>
                     </div>
                 </div>
             </div>
