--- a/Administracion/templates/Administracion/Tercero/Proveedor/Autenticacion/password_assign.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/Autenticacion/password_assign.html
@@ -6,47 +6,60 @@
 {% endblock %}
 
 {% block main %}
-    <div class="flex-1" style="background: url('{% static 'EVA/Plantilla/img/svg/pattern-1.svg' %}') no-repeat center bottom fixed; background-size: cover ">
+    <div class="flex-1 fondo-autenticacion-proveedores">
         <div class="container py-4 py-lg-5 my-lg-5 px-4 px-sm-0">
             <div class="row">
-            <div class="col-sm-12 col-md-3 col-lg-3 col-xl-4"></div>
+                <div class="col-sm-12 col-md-3 col-lg-3 col-xl-4"></div>
                 <div class="col-sm-12 col-md-6 col-lg-6 col-xl-4">
-                    <h1 class="text-white fw-300 mb-3 d-sm-block d-md-none">
-                        Secure login
-                    </h1>
-                    <div class="page-logo m-0 w-100 align-items-center justify-content-center rounded border-bottom-left-radius-0 border-bottom-right-radius-0 px-4">
-                        <img src="{% static 'EVA/Plantilla/img/logo.png' %}" alt="EVA" aria-roledescription="logo">
-                        <span class="page-logo-text mr-1">EVA - Proveedores</span>
-                    </div>
-                    <div class="card p-4 border-top-left-radius-0 border-top-right-radius-0" style="padding-top: 10px">
-                        {% if validlink %}
-                            <h3 class="header-title" style="text-align: center">Asignación de Contraseña</h3>
-                            <form action="" method="post" class="needs-validation" novalidate>
-                                <input type="hidden" value="{{ csrf_token }}" name="csrfmiddlewaretoken">
-                                {{ form.new_password1.errors }}
-                                <div class="form-group m-b-10">
-                                    <label class="id_new_password1" for="usuario">Contraseña</label>
-                                    <input type="password" id="id_new_password1" name="new_password1" class="form-control" placeholder="Digite la contraseña"  required>
-                                    <div class="invalid-feedback">Por favor digite la contraseña</div>
-                                </div>
-                                {{ form.new_password2.errors }}
-                                <div class="form-group m-b-10">
-                                    <label class="id_new_password2" for="contraseña">Confirmación de Contraseña</label>
-                                    <input type="password" id="id_new_password2" name="new_password2" class="form-control" placeholder="Confirme la contraseña"  required style="font-size: 0.8125rem;">
-                                    <div class="invalid-feedback">Por favor digite la contraseña</div>
-                                </div>
-                                <div class="row no-gutters" style="justify-content: center">
-                                    <div class="col-lg-8 pl-lg-1 my-2">
-                                        <button id="js-login-btn" type="submit" class="btn btn-danger btn-block btn-pills">Asignar Contraseña</button>
+                    <div class="card p-4 rounded-plus bg-faded" style="justify-content: center">
+                        <div style="display: flex; justify-content: center;">
+                                <img src="{% static 'EVA/Plantilla/img/custom/proveedores/icono-proveedores.svg' %}" height="80" alt="logo proveedores">
+                        </div>
+                        <div style="display: flex; justify-content: center;">
+                                <img src="{% static 'EVA/Plantilla/img/custom/proveedores/texto-proveedores.svg' %}" height="60" alt="logo proveedores">
+                        </div>
+
+                        <div class="card p-4 mt-1 rounded-plus bg-faded-white" style="justify-content: center">
+                            <div style="display: flex; justify-content: center;">
+                                <img src="{% static 'EVA/Plantilla/img/custom/logo-eva.svg' %}">
+                            </div>
+                            <br>
+                            <div style="display: flex; justify-content: center;">
+                                <h2 class="titulo-autenticacion">Asignación de Contraseña</h2>
+                            </div>
+
+                            {% if validlink %}
+                                <form action="" method="post" class="needs-validation" novalidate>
+                                    <input type="hidden" value="{{ csrf_token }}" name="csrfmiddlewaretoken">
+                                    {{ form.new_password1.errors }}
+                                    <div class="form-group m-b-10">
+                                        <label class="id_new_password1" for="usuario">Contraseña</label>
+                                        <input type="password" id="id_new_password1" name="new_password1" class="form-control" placeholder="Digite la contraseña"  required>
+                                        <div class="invalid-feedback">Por favor digite la contraseña</div>
                                     </div>
-                                </div>
-                            </form>
-                        {% else %}
-                            <h1 style="text-align: center">Se ha presentado un error.</h1>
-                            <p style="text-align: center">El enlace para el cambio de contraseña no es válido, posiblemente ya fue usado. <br />
-                                Por favor comuníquese con el administrador de EVA.</p>
-                            <a style="text-align: center" href="{% url 'Administracion:proveedor-iniciar-sesion' %}" >Ir a la página de inicio de sesión</a>
-                        {% endif %}
+                                    {{ form.new_password2.errors }}
+                                    <div class="form-group m-b-10">
+                                        <label class="id_new_password2" for="contraseña">Confirmación de Contraseña</label>
+                                        <input type="password" id="id_new_password2" name="new_password2" class="form-control" placeholder="Confirme la contraseña"  required style="font-size: 0.8125rem;">
+                                        <div class="invalid-feedback">Por favor digite la contraseña</div>
+                                    </div>
+                                    <div class="row no-gutters" style="justify-content: center">
+                                        <div class="col-lg-12 my-2 mt-4">
+                                            <button id="js-login-btn" type="submit" class="btn btn-primary btn-block">Asignar Contraseña</button>
+                                        </div>
+                                    </div>
+                                </form>
+                            {% else %}
+                                <h1 style="text-align: center">Se ha presentado un error.</h1>
+                                <p style="text-align: center">El enlace para el cambio de contraseña no es válido, posiblemente ya fue usado. <br />
+                                    Por favor comuníquese con el administrador de EVA.</p>
+                                <a style="text-align: center" href="{% url 'Administracion:proveedor-iniciar-sesion' %}" >Ir a la página de inicio de sesión</a>
+                            {% endif %}
+                        </div>
+                        <div class="mt-4" style="display: flex; justify-content: center;">
+                            <img src="{% static 'EVA/Plantilla/img/custom/logo-arios-blanco.svg' %}" style="width: 50%">
+                        </div>
+
                     </div>
                 </div>
             </div>
