--- a/Administracion/templates/Administracion/Tercero/Proveedor/Autenticacion/password_reset_complete.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/Autenticacion/password_reset_complete.html
@@ -6,25 +6,34 @@
 {% endblock %}
 
 {% block main %}
-    <div class="flex-1" style="background: url('{% static 'EVA/Plantilla/img/svg/pattern-1.svg' %}') no-repeat center bottom fixed; background-size: cover ">
+    <div class="flex-1 fondo-autenticacion-proveedores">
         <div class="container py-4 py-lg-5 my-lg-5 px-4 px-sm-0">
             <div class="row">
-            <div class="col-sm-12 col-md-3 col-lg-3 col-xl-4"></div>
+                <div class="col-sm-12 col-md-3 col-lg-3 col-xl-4"></div>
                 <div class="col-sm-12 col-md-6 col-lg-6 col-xl-4">
-                    <h1 class="text-white fw-300 mb-3 d-sm-block d-md-none">
-                        Secure login
-                    </h1>
-                    <div class="page-logo m-0 w-100 align-items-center justify-content-center rounded border-bottom-left-radius-0 border-bottom-right-radius-0 px-4">
-                        <img src="{% static 'EVA/Plantilla/img/logo.png' %}" alt="EVA" aria-roledescription="logo">
-                        <span class="page-logo-text mr-1">EVA - Proveedores</span>
-                    </div>
-                    <div class="card p-4 border-top-left-radius-0 border-top-right-radius-0">
-                        <h4 style="text-align: center">La contraseña se cambió con éxito</h4>
-                        {% if request.user.id %}
-                            <a style="text-align: center" href="{% url 'Administracion:cerrar-sesion' %}" >Ir a la página de inicio de sesión</a>
-                        {% else %}
-                            <a style="text-align: center" href="{% url 'Administracion:proveedor-iniciar-sesion' %}" >Ir a la página de inicio de sesión</a>
-                        {% endif %}
+                    <div class="card p-4 rounded-plus bg-faded" style="justify-content: center">
+                        <div style="display: flex; justify-content: center;">
+                                <img src="{% static 'EVA/Plantilla/img/custom/proveedores/icono-proveedores.svg' %}" height="80" alt="logo proveedores">
+                        </div>
+                        <div style="display: flex; justify-content: center;">
+                                <img src="{% static 'EVA/Plantilla/img/custom/proveedores/texto-proveedores.svg' %}" height="60" alt="logo proveedores">
+                        </div>
+
+                        <div class="card p-4 mt-1 rounded-plus bg-faded-white" style="justify-content: center">
+                            <div style="display: flex; justify-content: center;">
+                                <img src="{% static 'EVA/Plantilla/img/custom/logo-eva.svg' %}">
+                            </div>
+                            <br><br>
+                            <h4 style="text-align: center">La contraseña se cambió con éxito</h4>
+                            {% if request.user.id %}
+                                <button id="js-login-btn" type="button" onclick='window.location.href="{% url 'Administracion:cerrar-sesion' %}"' class="btn btn-primary btn-block mt-2">Ir a Inicio de Sesión</button>
+                            {% else %}
+                                <button id="js-login-btn" type="button" onclick='window.location.href="{% url 'Administracion:proveedor-iniciar-sesion' %}"' class="btn btn-primary btn-block mt-2">Ir a Inicio de Sesión</button>
+                            {% endif %}
+                        </div>
+                        <div class="mt-4" style="display: flex; justify-content: center;">
+                            <img src="{% static 'EVA/Plantilla/img/custom/logo-arios-blanco.svg' %}" style="width: 50%">
+                        </div>
                     </div>
                 </div>
             </div>
