--- a/Administracion/templates/Administracion/Tercero/Proveedor/registro.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/registro.html
@@ -16,55 +16,63 @@
 {% endblock styles%}
 
 {% block main %}
-    <div class="flex-1" style="background: url('{% static 'EVA/Plantilla/img/svg/pattern-1.svg' %}') no-repeat center bottom fixed; background-size: cover ">
-        <div class="container py-4 py-lg-5 my-lg-5 px-4 px-sm-0" style="width: 40%; !important;">
-            <div style="justify-content: center;">
-                <div class="page-logo m-0 w-100 align-items-center justify-content-center rounded border-bottom-left-radius-0 border-bottom-right-radius-0 px-4">
-                    <a href="javascript:void(0)" class="page-logo-link press-scale-down d-flex align-items-center">
-                        <img src="{% static 'EVA/Plantilla/img/logo.png' %}" alt="EVA" aria-roledescription="logo">
-                        <span class="page-logo-text mr-1">Registro de Proveedor</span>
-                        <i class="fal fa-angle-down d-inline-block ml-1 fs-lg color-primary-300"></i>
-                    </a>
-                </div>
-                <div class="card p-4 border-top-left-radius-0 border-top-right-radius-0">
-                    <form id="registro-proveedor-form" novalidate>
-                        {% csrf_token %}
-                        <div class="form-row">
-                            <div class="form-group col-xl-12 col-lg-12 col-md-12 col-sm-12">
-                                {% input_text_tag 'nombre' 'Nombre o Razón Social' placeholder="Ingrese el nombre o razón social" value=datos.nombre required="" maxlength="100" mensaje_validacion='Por favor digite el nombre' invalido=errores.nombre %}
+    <div class="flex-1 fondo-autenticacion-proveedores">
+        <div class="container py-4 py-lg-5 my-lg-5 px-4 px-sm-0">
+            <div class="row">
+                <div class="col-sm-12 col-md-2 col-lg-2 col-xl-2"></div>
+                <div class="col-sm-12 col-md-8 col-lg-8 col-xl-8">
+                    <div class="card p-4 rounded-plus bg-faded" style="justify-content: center">
+                        <div class="card p-4 mt-1 rounded-plus bg-faded-white" style="justify-content: center">
+                            <div style="display: flex; justify-content: center;">
+                                <img src="{% static 'EVA/Plantilla/img/custom/logo-eva.svg' %}">
                             </div>
-                            <div class="form-group col-xl-6 col-lg-6 col-md-12 col-sm-12">
-                                {% select_tag tipo_identificacion 'tipo_identificacion' 'Seleccione un tipo de identificación' texto_label="Tipo de identificación" value=proveedor.tipo_identificacion_id required="" mensaje_validacion='Por favor seleccione un tipo de identificación' invalido=errores.tipo_identificacion %}
+                            <br>
+                            <div style="display: flex; justify-content: center;">
+                                <h2 class="titulo-autenticacion">Registro de Proveedores</h2>
                             </div>
-                            <div class="form-group col-xl-4 col-lg-4 col-md-12 col-sm-12">
-                                {% input_text_tag 'identificacion' 'Identificación' placeholder='Ingrese el número de identificación' required='' maxlength='15' value=proveedor.identificacion mensaje_validacion='Por favor digite la identificación' invalido=errores.identificacion %}
-                            </div>
-                            <div class="form-group col-xl-2 col-lg-2 col-md-3 col-sm-3" style="display: none">
-                                {% input_number_tag 'digito_verificacion' 'DV' placeholder='Ingrese el DV' required='' min='0' max='9' value=proveedor.digito_verificacion mensaje_validacion='Por favor ingrese el digito de verificación' invalido=errores.digito_verificacion %}
-                            </div>
-                            <div class="form-group col-xl-6 col-lg-6 col-md-12 col-sm-12">
-                                {% input_email_tag 'correo' 'Correo electrónico' placeholder="Ingrese el correo electrónico" value=datos.correo_principal required="" maxlength="100" mensaje_validacion='Por favor digite el correo electrónico' invalido=errores.correo  %}
-                            </div>
-                            <div class="form-group col-xl-6 col-lg-6 col-md-12 col-sm-12">
-                                {% input_text_tag 'celular' 'Celular' placeholder="Ingrese el número de celular" value=datos.telefono_movil_principal required="" maxlength="30" mensaje_validacion='Por favor digite un número' invalido=errores.celular %}
-                            </div>
-                            <div class="form-group col-xl-12 col-lg-12 col-md-12 col-sm-12">
-                                Al registrarse está aceptando nuestros términos y condiciones al igual que nuestra política de cofidencialidad y tratamiento de datos.
-                            </div>
-                            <div class="form-group col-xl-12 col-lg-12 col-md-12 col-sm-12">
-                                <a href="javascript:verPoliticaconFidencialidad()" >
-                                    Ver Política de Cofidencialidad y Tratamiento de Datos
-                                </a>
-                            </div>
-                            <input id="datos_token" name="datos" hidden value="{{ datos }}">
-                            <div class="form-group col-xl-6 col-lg-6 col-md-6 col-sm-6">
-                                    <a href="{% url 'Administracion:proveedor-iniciar-sesion' %}" class="btn btn-danger btn-block">Cancelar</a>
-                            </div>
-                            <div class="form-group col-xl-6 col-lg-6 col-md-6 col-sm-6">
-                                <button id="js-login-btn" type="submit" class="btn btn-primary btn-block ">Registrarse</button>
-                            </div>
+                            <form id="registro-proveedor-form" novalidate>
+                                {% csrf_token %}
+                                <div class="form-row">
+                                    <div class="form-group col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                                        {% input_text_tag 'nombre' 'Nombre o Razón Social' placeholder="Ingrese el nombre o razón social" value=datos.nombre required="" maxlength="100" mensaje_validacion='Por favor digite el nombre' invalido=errores.nombre %}
+                                    </div>
+                                    <div class="form-group col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                                        {% select_tag tipo_identificacion 'tipo_identificacion' 'Seleccione un tipo de identificación' texto_label="Tipo de identificación" value=proveedor.tipo_identificacion_id required="" mensaje_validacion='Por favor seleccione un tipo de identificación' invalido=errores.tipo_identificacion %}
+                                    </div>
+                                    <div class="form-group col-xl-4 col-lg-4 col-md-12 col-sm-12">
+                                        {% input_text_tag 'identificacion' 'Identificación' placeholder='Ingrese el número de identificación' required='' maxlength='15' value=proveedor.identificacion mensaje_validacion='Por favor digite la identificación' invalido=errores.identificacion %}
+                                    </div>
+                                    <div class="form-group col-xl-2 col-lg-2 col-md-3 col-sm-3" style="display: none">
+                                        {% input_number_tag 'digito_verificacion' 'DV' placeholder='Ingrese el DV' required='' min='0' max='9' value=proveedor.digito_verificacion mensaje_validacion='Por favor ingrese el digito de verificación' invalido=errores.digito_verificacion %}
+                                    </div>
+                                    <div class="form-group col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                                        {% input_email_tag 'correo' 'Correo electrónico' placeholder="Ingrese el correo electrónico" value=datos.correo_principal required="" maxlength="100" mensaje_validacion='Por favor digite el correo electrónico' invalido=errores.correo  %}
+                                    </div>
+                                    <div class="form-group col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                                        {% input_text_tag 'celular' 'Celular' placeholder="Ingrese el número de celular" value=datos.telefono_movil_principal required="" maxlength="30" mensaje_validacion='Por favor digite un número' invalido=errores.celular %}
+                                    </div>
+                                    <div class="form-group col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                                        Al registrarse está aceptando nuestros términos y condiciones al igual que nuestra política de cofidencialidad y tratamiento de datos.
+                                    </div>
+                                    <div class="form-group col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                                        <a href="javascript:verPoliticaconFidencialidad()" >
+                                            Ver Política de Cofidencialidad y Tratamiento de Datos
+                                        </a>
+                                    </div>
+                                    <input id="datos_token" name="datos" hidden value="{{ datos }}">
+                                    <div class="form-group col-xl-6 col-lg-6 col-md-6 col-sm-6">
+                                            <a href="{% url 'Administracion:proveedor-iniciar-sesion' %}" class="btn btn-danger btn-block">Cancelar</a>
+                                    </div>
+                                    <div class="form-group col-xl-6 col-lg-6 col-md-6 col-sm-6">
+                                        <button id="js-login-btn" type="submit" class="btn btn-primary btn-block ">Registrarse</button>
+                                    </div>
+                                </div>
+                            </form>
                         </div>
-                    </form>
+                        <div class="mt-4" style="display: flex; justify-content: center;">
+                            <img src="{% static 'EVA/Plantilla/img/custom/logo-arios-blanco.svg' %}" style="width: 25%">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
