EVA-156 feat: Los documentos de un proveedor ya sea desde el perfil, aprobación o en la pantalla de carga de estos se visualizan en un modal en lugar de abrir otra ventana.
Con esto se busca mejorar la experiencia del usuario.

--- a/Administracion/templates/Administracion/Tercero/Proveedor/perfil.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/perfil.html
@@ -104,6 +104,7 @@
         </div>
     </div>
     <div class="modal fade" tabindex="-1" id="accion_proveedor" role="dialog"></div>
+    {% include 'EVA/_common/_vista_previa_modal.html' with titulo_modal='Vista Documento' %}
 {% endblock main%}
 
 {% block scripts %}
