--- a/Administracion/templates/Administracion/Tercero/Proveedor/entidades_bancarias.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/entidades_bancarias.html
@@ -59,7 +59,7 @@
                                                         <td>{{ eb.entidad_bancaria }}</td>
                                                         <td>{{ eb.numero_cuenta }}</td>
                                                         <td>
-                                                            <a class="far fa-2x fa-custom fa-eye" style="text-decoration: none !important;" href="{% url 'Administracion:proveedor-perfil-ver-certificacion' eb.id %}" target="_blank" data-original-title="Ver" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title=""></a>
+                                                            <a class="far fa-2x fa-custom fa-eye" style="text-decoration: none !important;" href="javascript:abrirModalVistaPrevia('{% url 'Administracion:proveedor-perfil-ver-certificacion' eb.id %}')" data-original-title="Ver" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title=""></a>
                                                         </td>
                                                         <td>
                                                           <a class="far fa-2x fa-edit" href="javascript:abrirModalGestionarEntidadBancaria('{% url 'Administracion:proveedor-perfil-entidad-bancaria-editar' eb.id %}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Editar"></a>
@@ -81,6 +81,7 @@
     </div>
     <div class="modal fade" tabindex="-1" id="gestionar_entidad_bancaria" role="dialog"></div>
     {% include 'Administracion/_elements/_modal_confirmar_eliminar.html' with objeto='administracion/proveedor/perfil/entidad-bancaria' %}
+    {% include 'EVA/_common/_vista_previa_modal.html' with titulo_modal='Vista Documento' %}
 {% endblock main %}
 
 {% block scripts %}
@@ -88,6 +89,7 @@
     <script src="{% static 'EVA/Plantilla/js/custom/validaciones/validar_formulario.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/datagrid/datatables/datatables.bundle.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/datagrid/datatables/datatables.export.js' %}"></script>
+    <script src="{% static 'EVA/Plantilla/js/custom/funcionesGenerales.js' %}"></script>
     <script src="{% static 'Administracion/js/confirmarEliminar.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/custom/exportar_tabla.js' %}"></script>
 	<script src="{% static 'EVA/Plantilla/js/custom/modificacionesSelect2.js' %}"></script>
