--- a/Administracion/templates/Administracion/_common/_tarjeta_documento.html
+++ b/Administracion/templates/Administracion/_common/_tarjeta_documento.html
@@ -26,7 +26,7 @@
             <div class="panel-content">
                 <div class="p-3" style="text-align: center;">
                     <h5>Ver Documento Cargado</h5>
-                    <a class="fal fa-2x fa-custom fa-file-alt" style="text-decoration: none !important;" href="{% url 'Administracion:proveedor-perfil-ver-documento' objeto.id %}" target="_blank" data-original-title="Ver" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="Ver Documento Cargado"></a>
+                    <a class="fal fa-2x fa-custom fa-file-alt" style="text-decoration: none !important;" href="javascript:abrirModalVistaPrevia('{% url 'Administracion:proveedor-perfil-ver-documento' objeto.id %}')" data-original-title="Ver" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="Ver Documento Cargado"></a>
                 </div>
             </div>
         </div>
