EVA-157 Fix: Se corrige el error con la ultima fecha de aprobación.

--- a/Administracion/templates/Administracion/Tercero/Proveedor/tarjeta_estado_proveedor.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/tarjeta_estado_proveedor.html
@@ -53,7 +53,7 @@
                                 <b>Proveedor: </b>{% if datos_estado.estado == True %}<span class="badge badge-primary">Activo</span>{% else %}<span class="badge badge-secondary">Inactivo</span>{% endif %}<br>
                                 <b>Estado: </b>{{ datos_estado.estado_descripcion }}<br>
                                 {% if datos_estado.ultima_act %}
-                                    <b>Última Aprobación:</b> {{ datos_estado.ultima_act |date:'Y-m-d h:m'}}<br>
+                                    <b>Última Aprobación:</b> {{ datos_estado.ultima_act |date:'Y-m-d H:i'}}<br>
                                 {% endif %}
                                 {% if datos_estado.estado_solicitud %}
                                     <b>Causa del Rechazo: </b>{{ datos_estado.estado_solicitud }}
