--- a/Administracion/templates/Administracion/Tercero/Proveedor/solicitudes_proveedores.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/solicitudes_proveedores.html
@@ -55,7 +55,7 @@
                                                             {% endif %}
                                                         </td>
                                                         <td>
-                                                            <a class="far fa-2x fa-check-square" href="{% url 'Administracion:proveedor-solicitudes-perfil' solicitud.proveedor_id %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Aprobar/Rechazar"></a>
+                                                            <a class="far fa-2x fa-check-square" href="{% url 'Administracion:proveedor-solicitudes-perfil' solicitud.proveedor_id %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Aprobar/Denegar"></a>
                                                         </td>
                                                     </tr>
                                                 {% endfor %}
