--- a/Administracion/templates/Administracion/Tercero/Proveedor/tarjeta_estado_proveedor.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/tarjeta_estado_proveedor.html
@@ -56,7 +56,7 @@
                                     <b>Última Aprobación:</b> {{ datos_estado.ultima_act |date:'Y-m-d H:i'}}<br>
                                 {% endif %}
                                 {% if datos_estado.estado_solicitud %}
-                                    <b>Causa del Rechazo: </b>{{ datos_estado.estado_solicitud }}
+                                    <b>Causa de la Denegación: </b>{{ datos_estado.estado_solicitud }}
                                 {% endif %}
                             </div>
                         </div>
