EVA-157 Feat: Se cambia la palabra bienes por productos en la parte visual.

--- a/Administracion/templates/Administracion/Tercero/Proveedor/productos_servicios.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/productos_servicios.html
@@ -60,7 +60,7 @@
                                         {% endif %}
                                         <div id="div_contenedor"></div>
                                         <div class="form-group col-md-12">
-                                            {% input_textarea_tag 'bienes_servicios' 'Bienes o Servicios Adicionales (Opcional)' placeholder="Describa los bienes o servicios que ofrece y que no se encuentran en las selecciones." maxlength="500" value=productos_servicios_adicionales mensaje_validacion='Por favor ingrese el objeto del contrato.' invalido=errores.objeto_del_contrato %}
+                                            {% input_textarea_tag 'bienes_servicios' 'Productos o Servicios Adicionales (Opcional)' placeholder="Describa los productos o servicios que ofrece y que no se encuentran en las selecciones." maxlength="500" value=productos_servicios_adicionales mensaje_validacion='Por favor ingrese un texto.' invalido=errores.objeto_del_contrato %}
                                         </div>
                                         <div class="form-row justify-content-end">
                                              <div>
