--- a/Administracion/templates/Administracion/_common/_tarjeta_proveedor.html
+++ b/Administracion/templates/Administracion/_common/_tarjeta_proveedor.html
@@ -32,7 +32,7 @@
                                 {% else %}
                                     {% if pro_ser %}
                                         <small class="mt-0 mb-3 text-muted">
-                                            {% if d.nombre_campo == 'Bienes y Servicios Adicionales' %}
+                                            {% if d.nombre_campo == 'Productos y Servicios Adicionales' %}
                                                 <b>{{ d.nombre_campo }}</b>: {{ d.valor_campo }}
                                             {% else %}
                                             <b>{{ d.nombre_campo }}</b>:
