EVA-157 fix: Se corrige error de escritura en el modal de aprobar/denegar a un proveedor.

--- a/Administracion/templates/Administracion/_common/_modal_aprobar_rechazar_proveedor.html
+++ b/Administracion/templates/Administracion/_common/_modal_aprobar_rechazar_proveedor.html
@@ -23,7 +23,7 @@
 
                 <div class="form-row">
                     <div class="form-group col-12">
-                        {% input_textarea_tag 'comentario' 'Comentarios' maxlength="300" placeholder="Describa la razón del la denegación" required="" mensaje_validacion='Por favor escriba un comentario' invalido=errores.comentario %}
+                        {% input_textarea_tag 'comentario' 'Comentarios' maxlength="300" placeholder="Describa la razón de la denegación" required="" mensaje_validacion='Por favor escriba un comentario' invalido=errores.comentario %}
                     </div>
                 </div>
             </div>
